# weight-tracker

./: Cargo.toml  Dockerfile  README.md
microk8s/: deployment.yaml  ingress.yaml  service.yaml
src/: database.rs  form.rs  main.rs
templates/: index.html.tera
