[package]
name = "weight-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5"
dotenv = "0.15"
postgres = { version = "0.19", features=["with-chrono-0_4"]}
serde = {version = "1.0", features = ["derive"]}
time = {version = "0.3", features = ["macros", "parsing", "serde"]}
chrono = {version = "0.4", features = ["serde"]}


[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]