[package]
name = "weight-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5"
serde = {version = "1.0", features = ["derive"]}
time = {version = "0.3", features = ["serde"]}


[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "time"]



